--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
 <head>
    <title>Eonbio</title>
 </head>
+   <body>
+      <h2> We are a unqiue agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
+   </body>
 </html>
