--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 </head>
    <body>
       <h2> We are a unqiue agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
+      <button> Manuscript Editing</button>
+      <button> Bioinformatics</button>
    </body>
 </html>
