--- a/index.html
+++ b/index.html
@@ -1,11 +1,212 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 <html>
+
 <head>
-   <title>Eonbio</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Eonbio</title>
+    <meta name="description" content="We are a unique agency helping you walk the road of Manuscript Editing and Bioinformatics">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-material-design.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/material.min.js"></script>
 </head>
-   <body>
-      <h2> We are a unqiue agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
-      <button> Manuscript Editing</button>
-      <button> Bioinformatics</button>
-   </body>
+
+<body>
+    <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                <a class="navbar-brand" href="#">
+                    <i class="fa fa-wrench"></i>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse-1">
+                <ul class="nav navbar-nav pull-right">
+                    <li>
+                        <a href="#whyus">Why</a>
+                    </li>
+                    <li>
+                        <a href="#manuscriptediting">Editing</a>
+                    </li>
+                    <li>
+                        <a href="#bioinformatics">Bioinformatics</a>
+                    </li>
+                    <li>
+                        <a href="#price">Price</a>
+                    </li>
+                    <li>
+                        <a href="#contactus">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="main clear-fix">
+        <section class="header">
+            <h2> We are a unqiue agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
+            <div class="services">
+                <a class="btn" href="#manuscriptediting"> Manuscript Editing</a>
+                <a class="btn" href="#bioinformatics"> Bioinformatics</a>
+            </div>
+        </section>
+        <section class="whyus">
+            <div id="whyus" class="anchor"></div>
+            <h2>Why Eonbio?</h2>
+            <div>
+                <ul>
+                    <li>
+                        <div>Solid track record</div>
+                        <div>Eonbio staff has three decades of experience in biological research, over 100 papers, track record of extramural funding (NIH, AHA, ACS etc), and training in bioinformatics</div>
+                    </li>
+                    <li>
+                        <div>
+                            Comprehensive editing
+                        </div>
+                        <div>
+                            We cover all aspects of the manuscript. Where appropriate, we also provide friendly scientific advice to further improve your work at no extra charge
+
+                        </div>
+                    </li>
+                    <li>
+                        <div>Full confidentiality
+                        </div>
+                        <div>No one outside of Eonbio will see your manuscript
+                        </div>
+                    </li>
+                    <li>
+                        <div>Fast turnaround
+                        </div>
+                        <div>Generally 4-7 days.
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="manuscriptediting">
+            <div id="manuscriptediting" class="anchor"></div>
+            <h2>Manuscript Editing</h2>
+            <div>
+                <h3>Are you familiar with comments like these from Reviewers or Editors?
+                </h3>
+                <ul>
+                    <li><q>English needs significant improvement</q></li>
+                    <li><q>English needs to be thoroughly edited before the paper can be accepted</q></li>
+                    <li><q>Unfortunately the paper is full of English errors that need to be corrected</q></li>
+                    <li><q>The Figs are not properly drawn and hard to understand; the bar graphs need error bars, and changes need p-values</q></li>
+                    <li><q>Please reformat the References according to our Journal guidelines</q></li>
+                    <li><q>Several references appear incomplete</q></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Now you no longer walk the publication road alone. Eonbio will</h3>
+                <ul>
+                    <li>We can work on both American and British styles, and convert one to other if needed</li>
+                    <li>Correct all English errors in your manuscript
+                    </li>
+                    <li>Improve the English to a professional level</li>
+                    <li>Reformat all parts as needed, including margins, headings, spaces and word counts.
+                    </li>
+                    <li>Correct, complete and reformat references and citations</li>
+                    <li>Redraw and improve the Figures as needed; we meet the required resolution and image quality, mandated by most journals.</li>
+                </ul>
+            </div>
+        </section>
+        <section class="bioinformatics">
+            <div id="bioinformatics" class="anchor"></div>
+            <h2>Bioinformatics</h2>
+            <h3>Analysis of sequence and structures can be daunting, but is increasingly required in high quality journals. Now you no longer walk the bioinformatic road alone. Eonbio will provide the following services:</h3>
+            <div>
+                <div>Protein structure analysis:</div>
+                <ul>
+                    <li>Hydrophobicity plots</li>
+                    <li>Predict secondary structure in terms of areas of α-helix, β-strand, and loops
+                    </li>
+                    <li>Homology-based structure modeling in 3D Rasmol format, using multiple structural templates and mainly the TASSER software suite
+                    </li>
+                    <li>Multiple alignments of primary structure with phylogeny tree plot</li>
+                    <li>Identification of specific motifs and domains as requested
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div>RNA structure prediction:
+                </div>
+                <ul>
+                    <li>Predict RNA secondary structures using either MFE (Minimum Free Energy) or MEA (Maximum Expected Accuracy) algorithms and Turner99 parameters
+                    </li>
+                    <li>Provide a secondary structure ensemble of co-transcriptional RNA folding
+                    </li>
+                    <li>Output files provided in several common and easy picture formats, such as PDF, JPG or PPT
+                    </li>
+                </ul>
+
+            </div>
+        </section>
+        <section class="price">
+            <div id="price" class="anchor"></div>
+            <h2>Price</h2>
+            <div>
+                <div>Manuscript editing</div>
+                <div>
+                    <ul>
+                        <li>including formatting</li>
+                        <li>Flat fee (regardless of number of pages)</li>
+                    </ul>
+                </div>
+                <div>
+                    <div>$250/7days</div>
+                    <div>$300/4days</div>
+                </div>
+            </div>
+            <div>
+                <div>Figure formatting</div>
+                <div>
+                    <ul>
+                        <li>including redrawing</li>
+                        <li>Flat fee </li>
+                    </ul>
+                </div>
+                <div>
+                    <div>$40/figure</div>
+                </div>
+            </div>
+
+        </section>
+        <section class="contactus">
+            <div id="contactus" class="anchor"></div>
+            <h2>Contact Us</h2>
+
+        </section>
+        <footer> Design by 2017 Zhresearches.com</footer>
+
+    </div>
+    <script>
+        $.material.init();
+    </script>
+
+    <script src="js/main.js"></script>
+</body>
+
 </html>
