--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Eonbio</title>
-    <meta name="description" content="We are a unique agency helping you walk the road of Manuscript Editing and Bioinformatics">
+    <meta name="description" content="The Eonbio is a unique agency helping bio scientists walk the road of Manuscript Editing and Bioinformatics">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
@@ -67,38 +67,46 @@
         <section class="header">
             <h2> We are a unqiue agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
             <div class="services">
-                <a class="btn" href="#manuscriptediting"> Manuscript Editing</a>
-                <a class="btn" href="#bioinformatics"> Bioinformatics</a>
+                <a class="btn btn-lg" href="#manuscriptediting"> Manuscript Editing</a>
+                <a class="btn btn-lg" href="#bioinformatics"> Bioinformatics</a>
             </div>
         </section>
         <section class="whyus">
             <div id="whyus" class="anchor"></div>
             <h2>Why Eonbio?</h2>
             <div>
-                <ul>
-                    <li>
-                        <div>Solid track record</div>
-                        <div>Eonbio staff has three decades of experience in biological research, over 100 papers, track record of extramural funding (NIH, AHA, ACS etc), and training in bioinformatics</div>
+                <ul class="row">
+                    <li class="col-md-3">
+                        <i class="fa fa-certificate" aria-hidden="true"></i>
+                        <div class="list-header">
+                            Solid track record
+                        </div>
+                        <div class="list-content">Eonbio staff has three decades of experience in biological research, over 100 papers, track record of extramural funding (NIH, AHA, ACS etc), and training in bioinformatics</div>
                     </li>
-                    <li>
-                        <div>
+                    <li class="col-md-3">
+                        <i class="fa fa-pencil" aria-hidden="true"></i>
+                        <div class="list-header">
                             Comprehensive editing
                         </div>
-                        <div>
+                        <div class="list-content">
                             We cover all aspects of the manuscript. Where appropriate, we also provide friendly scientific advice to further improve your work at no extra charge
 
                         </div>
                     </li>
-                    <li>
-                        <div>Full confidentiality
+                    <li class="col-md-3">
+                        <i class="fa fa-shield " aria-hidden="true"></i>
+                        <div class="list-header">
+                            Full confidentiality
                         </div>
-                        <div>No one outside of Eonbio will see your manuscript
+                        <div class="list-content">No one outside of Eonbio will see your manuscript
                         </div>
                     </li>
-                    <li>
-                        <div>Fast turnaround
+                    <li class="col-md-3">
+                        <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+                        <div class="list-header">
+                            Fast turnaround
                         </div>
-                        <div>Generally 4-7 days.
+                        <div class="list-content">Generally 4-7 days.
                         </div>
                     </li>
                 </ul>
