--- a/index.html
+++ b/index.html
@@ -118,26 +118,38 @@
             <div>
                 <h3>Are you familiar with comments like these from Reviewers or Editors?
                 </h3>
-                <ul>
-                    <li><q>English needs significant improvement</q></li>
-                    <li><q>English needs to be thoroughly edited before the paper can be accepted</q></li>
-                    <li><q>Unfortunately the paper is full of English errors that need to be corrected</q></li>
-                    <li><q>The Figs are not properly drawn and hard to understand; the bar graphs need error bars, and changes need p-values</q></li>
-                    <li><q>Please reformat the References according to our Journal guidelines</q></li>
-                    <li><q>Several references appear incomplete</q></li>
+                <ul class="quotas">
+                    <li class="well well-sm"><q>English needs significant improvement</q></li>
+                    <li class="well well-sm"><q>English needs to be thoroughly edited before the paper can be accepted</q></li>
+                    <li class="well well-sm"><q>Unfortunately the paper is full of English errors that need to be corrected</q></li>
+                    <li class="well well-sm"><q>The Figs are not properly drawn and hard to understand; the bar graphs need error bars, and changes need p-values</q></li>
+                    <li class="well well-sm"><q>Please reformat the References according to our Journal guidelines</q></li>
+                    <li class="well well-sm"><q>Several references appear incomplete</q></li>
                 </ul>
             </div>
             <div>
                 <h3>Now you no longer walk the publication road alone. Eonbio will</h3>
-                <ul>
-                    <li>We can work on both American and British styles, and convert one to other if needed</li>
-                    <li>Correct all English errors in your manuscript
+                <ul class="resolution row">
+                    <li class="col-md-4 resolution-item">
+                        <div>We can work on both American and British styles, and convert one to other if needed
+                        </div>
                     </li>
-                    <li>Improve the English to a professional level</li>
-                    <li>Reformat all parts as needed, including margins, headings, spaces and word counts.
+                    <li class="col-md-4 resolution-item">
+                        <div>Correct all English errors in your manuscript
+                        </div>
                     </li>
-                    <li>Correct, complete and reformat references and citations</li>
-                    <li>Redraw and improve the Figures as needed; we meet the required resolution and image quality, mandated by most journals.</li>
+                    <li class="col-md-4 resolution-item">
+                        <div>Improve the English to a professional level</div>
+                    </li>
+                    <li class="col-md-4 resolution-item">
+                        <div>Reformat all parts as needed, including margins, headings, spaces and word counts</div>
+                    </li>
+                    <li class="col-md-4 resolution-item">
+                        <div>Correct, complete and reformat references and citations</div>
+                    </li>
+                    <li class="col-md-4 resolution-item">
+                        <div>Redraw and improve the Figures as needed; we meet the required resolution and image quality, mandated by most journals</div>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -145,62 +157,84 @@
             <div id="bioinformatics" class="anchor"></div>
             <h2>Bioinformatics</h2>
             <h3>Analysis of sequence and structures can be daunting, but is increasingly required in high quality journals. Now you no longer walk the bioinformatic road alone. Eonbio will provide the following services:</h3>
-            <div>
-                <div>Protein structure analysis:</div>
-                <ul>
-                    <li>Hydrophobicity plots</li>
-                    <li>Predict secondary structure in terms of areas of α-helix, β-strand, and loops
-                    </li>
-                    <li>Homology-based structure modeling in 3D Rasmol format, using multiple structural templates and mainly the TASSER software suite
-                    </li>
-                    <li>Multiple alignments of primary structure with phylogeny tree plot</li>
-                    <li>Identification of specific motifs and domains as requested
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <div>RNA structure prediction:
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="bio-header">Protein structure analysis:</div>
+                    <ul class="bio-content">
+                        <li>Hydrophobicity plots</li>
+                        <li>Predict secondary structure in terms of areas of α-helix, β-strand, and loops
+                        </li>
+                        <li>Homology-based structure modeling in 3D Rasmol format, using multiple structural templates and mainly the TASSER software suite
+                        </li>
+                        <li>Multiple alignments of primary structure with phylogeny tree plot</li>
+                        <li>Identification of specific motifs and domains as requested
+                        </li>
+                    </ul>
                 </div>
-                <ul>
-                    <li>Predict RNA secondary structures using either MFE (Minimum Free Energy) or MEA (Maximum Expected Accuracy) algorithms and Turner99 parameters
-                    </li>
-                    <li>Provide a secondary structure ensemble of co-transcriptional RNA folding
-                    </li>
-                    <li>Output files provided in several common and easy picture formats, such as PDF, JPG or PPT
-                    </li>
-                </ul>
+                <div class="col-md-6">
+                    <div class="bio-header">RNA structure prediction:
+                    </div>
+                    <ul class="bio-content">
+                        <li>Predict RNA secondary structures using either MFE (Minimum Free Energy) or MEA (Maximum Expected Accuracy) algorithms and Turner99 parameters
+                        </li>
+                        <li>Provide a secondary structure ensemble of co-transcriptional RNA folding
+                        </li>
+                        <li>Output files provided in several common and easy picture formats, such as PDF, JPG or PPT
+                        </li>
+                    </ul>
 
+                </div>
             </div>
         </section>
         <section class="price">
             <div id="price" class="anchor"></div>
-            <h2>Price</h2>
-            <div>
-                <div>Manuscript editing</div>
-                <div>
-                    <ul>
-                        <li>including formatting</li>
-                        <li>Flat fee (regardless of number of pages)</li>
-                    </ul>
-                </div>
-                <div>
-                    <div>$250/7days</div>
-                    <div>$300/4days</div>
-                </div>
-            </div>
-            <div>
-                <div>Figure formatting</div>
-                <div>
-                    <ul>
-                        <li>including redrawing</li>
-                        <li>Flat fee </li>
-                    </ul>
-                </div>
-                <div>
-                    <div>$40/figure</div>
-                </div>
-            </div>
+            <h2>How much does it cost?</h2>
+            <div class="row ">
+                <div class="col-md-4 tier-container">
+                    <div class="tier">
+                        <div class="tier-header">Manuscript editing</div>
+                        <div class="tier-features">
+                            <ul>
+                                <li>including formatting</li>
+                                <li>Flat fee (regardless of number of pages)
+                                </li>
+                                <li>7 days turnaround</li>
+                            </ul>
+                        </div>
 
+                        <div class="tier-price">$250</div>
+                    </div>
+                </div>
+                <div class="col-md-4 tier-container">
+                    <div class="tier">
+                        <div class="tier-header">Manuscript editing Premium </div>
+                        <div class="tier-features">
+                            <ul>
+                                <li>including formatting</li>
+                                <li>Flat fee (regardless of number of pages)</li>
+                                <li>4 days turnaround</li>
+                            </ul>
+                        </div>
+
+                        <div class="tier-price">$300</div>
+
+                    </div>
+                </div>
+                <div class="col-md-4 tier-container">
+                    <div class="tier">
+                        <div class="tier-header">Figure formatting</div>
+                        <div class="tier-features">
+                            <ul>
+                                <li>including redrawing</li>
+                                <li>Flat fee </li>
+                            </ul>
+                        </div>
+
+                        <div class="tier-price">$40/figure</div>
+
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="contactus">
             <div id="contactus" class="anchor"></div>
