--- a/index.html
+++ b/index.html
@@ -243,46 +243,20 @@
         <section class="contactus">
             <div id="contactus" class="anchor"></div>
             <h2>Contact Us</h2>
-            <form novalidate>
-                <div id="mc_embed_signup_scroll">
-                    <div class="indicates-required pull-right"><span class="asterisk">*</span> indicates required</div>
-
-                    <div class="form-group label-floating is-empty">
-                        <label for="mce-FNAME" class="control-label">First Name</label><span class="asterisk">*</span>
-                        <input type="text" name="LNAME" class="form-control" id="mce-FNAME" />
-                    </div>
-                    <div class="form-group label-floating is-empty">
-                        <label for="mce-LNAME" class="control-label">Last Name</label>
-                        <input type="text" name="LNAME" class="form-control" id="mce-LNAME" />
-                    </div>
-                    <div class="form-group label-floating is-empty">
-                        <label for="mce-EMAIL" class="control-label">Email</label><span class="asterisk">*</span>
-                        <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" />
-                    </div>
-                    <div class="form-group label-floating is-empty">
-                        <label for="mce-MMERGE3" class=" control-label ">Message</label><span class="asterisk ">*</span>
-                        <textarea rows="5" class="form-control" id="mce-MMERGE3" name="MMERGE3"></textarea>
-                    </div>
-                    <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                        <input type="text" name="b_8351" tabindex="-1" value="">
-                    </div>
-
-                    <button class="btn btn-primary " name="subscribe" id="mc-embedded-subscribe">Send Message</button>
-            </form>
+            <div style="text-align:center">
+                <a href="mailto:help@eonbio.com">
+                    <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
+                </a>
+            </div>
         </section>
         <footer> Design by 2017 Zhresearches.com</footer>
 
-        </div>
-        <script>
-            $.material.init();
-        </script>
+    </div>
+    <script>
+        $.material.init();
+    </script>
 
-        <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
