--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                     </div>
 
                     <button class="btn btn-primary " name="subscribe" id="mc-embedded-subscribe">Send Message</button>
+                    <span id="emailMessage"></span>
                 </div>
                 <div style="text-align:center">
                     <a href="mailto:help@eonbio.com">
