--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
 <html>
 
 <head>
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Eonbio</title>
-    <meta name="description" content="The Eonbio is a unique agency helping bio scientists walk the road of Manuscript Editing and Bioinformatics">
+    <title>EonBio</title>
+    <meta name="description" content="The EonBio is a unique agency helping bio scientists walk the road of Manuscript Editing and Bioinformatics">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
@@ -38,7 +55,7 @@
                         <span class="icon-bar"></span>
                     </button>
                 <a class="navbar-brand" href="#">
-                    <i class="fa fa-wrench"></i>
+                    <img class="logo" src="images/logo.jpg" />
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
@@ -65,7 +82,7 @@
 
     <div class="main clear-fix">
         <section class="header">
-            <h2> We are a unqiue agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
+            <h2> We are a unique agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
             <div class="services">
                 <a class="btn btn-lg" href="#manuscriptediting"> Manuscript Editing</a>
                 <a class="btn btn-lg" href="#bioinformatics"> Bioinformatics</a>
@@ -73,7 +90,7 @@
         </section>
         <section class="whyus">
             <div id="whyus" class="anchor"></div>
-            <h2>Why Eonbio?</h2>
+            <h2>Why EonBio?</h2>
             <div>
                 <ul class="row">
                     <li class="col-md-3">
@@ -81,7 +98,7 @@
                         <div class="list-header">
                             Solid track record
                         </div>
-                        <div class="list-content">Eonbio staff has three decades of experience in biological research, over 100 papers, track record of extramural funding (NIH, AHA, ACS etc), and training in bioinformatics</div>
+                        <div class="list-content">EonBio staff has three decades of experience in biological research, over 100 papers, track record of extramural funding (NIH, AHA, ACS etc), and training in bioinformatics</div>
                     </li>
                     <li class="col-md-3">
                         <i class="fa fa-pencil" aria-hidden="true"></i>
@@ -98,7 +115,7 @@
                         <div class="list-header">
                             Full confidentiality
                         </div>
-                        <div class="list-content">No one outside of Eonbio will see your manuscript
+                        <div class="list-content">No one outside of EonBio will see your manuscript
                         </div>
                     </li>
                     <li class="col-md-3">
@@ -110,6 +127,73 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </section>
+        <section class="testimonials">
+            <div id="testimonials" class="anchor"></div>
+            <div id="carousel-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-generic" data-slide-to="2"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+
+                        <div class="slide">
+                            <div class="testimonials">
+                                <div class="avatar-container">
+
+                                    <img height="100" width="100" src="images/avatar.png" alt="Tiasha Letostak, Ohio, USA">
+
+                                    <h3>Tiasha Letostak, Ohio, USA</h3>
+                                </div>
+                                <blockquote class="style1">
+                                    <span>We have always been impressed by EonBio’s expertise in working with draft presentations and improving them to universally acceptable, publication-quality material. EonBio is always our first choice in any help with professional writing</span>
+                                </blockquote>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+
+                        <div class="slide">
+                            <div class="testimonials">
+                                <div class="avatar-container">
+                                    <a href="#testimonials" class="avatar">
+                                        <img height="100" width="100" src="images/avatar.png" alt="George Ji, Suzhou, China">
+                                    </a>
+                                    <h3>George Ji, Suzhou, China</h3>
+                                </div>
+                                <blockquote class="style1">
+                                    <span>We have used the professional help of the EonBio staff in several of our grant applications and research manuscripts. EonBio has always generated amazingly high quality papers with improved English, better figures and sometimes new ideas for further improvement, to respond to the reviewers. The very rapid turnaround and reasonable cost are also major incentives to hire EonBio</span>
+                                </blockquote>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+
+                        <div class="slide">
+                            <div class="testimonials">
+                                <div class="avatar-container">
+
+                                    <img height="100" width="100" src="images/avatar.png" alt="Toshihiro Ansai, Kyushu Dental University, Japan">
+
+                                    <h3>Toshihiro Ansai, Kyushu Dental University, Japan</h3>
+                                </div>
+                                <blockquote class="style1">
+                                    <span>We have solicited EonBio’s proofing expertise in our research papers over multiple journals, and have been profoundly satisfied with the final results. All aspects of the writing, and not just the English grammar, vastly improved. The EonBio staff is highly professional and friendly, and will work diligently to meet your publication needs. Since EonBio is not in the publishing business, there is also no conflict of interest, which is a huge plus.</span>
+                                </blockquote>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
         <section class="manuscriptediting">
@@ -128,7 +212,7 @@
                 </ul>
             </div>
             <div>
-                <h3>Now you no longer walk the publication road alone. Eonbio will</h3>
+                <h3>Now you no longer walk the publication road alone. EonBio will</h3>
                 <ul class="resolution row">
                     <li class="col-md-4 resolution-item">
                         <div>We can work on both American and British styles, and convert one to other if needed
@@ -156,7 +240,7 @@
         <section class="bioinformatics">
             <div id="bioinformatics" class="anchor"></div>
             <h2>Bioinformatics</h2>
-            <h3>Analysis of sequence and structures can be daunting, but is increasingly required in high quality journals. Now you no longer walk the bioinformatic road alone. Eonbio will provide the following services:</h3>
+            <h3>Analysis of sequence and structures can be daunting, but is increasingly required in high quality journals. Now you no longer walk the bioinformatic road alone. EonBio will provide the following services:</h3>
             <div class="row">
                 <div class="col-md-6">
                     <div class="bio-header">Protein structure analysis:</div>
@@ -276,7 +360,7 @@
                     <span id="emailMessage"></span>
                 </div>
                 <div style="text-align:center">
-                    <a href="mailto:help@eonbio.com">
+                    <a href="mailto:help@EonBio.com">
                         <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
 
                     </a>
