--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                         <a href="#manuscriptediting">Editing</a>
                     </li>
                     <li>
+                        <a href="#testimonials">Testimonials</a>
+                    </li>
+                    <li>
                         <a href="#bioinformatics">Bioinformatics</a>
                     </li>
                     <li>
@@ -131,6 +134,7 @@
         </section>
         <section class="testimonials">
             <div id="testimonials" class="anchor"></div>
+            <h2>Testimonials</h2>
             <div id="carousel-generic" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
