--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <div class="main clear-fix">
         <section class="header">
+            <img class="logo" src="images/logo2.png" />
             <h2> We are a unique agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
             <div class="services">
                 <a class="btn btn-lg" href="#manuscriptediting"> Manuscript Editing</a>
@@ -152,7 +153,7 @@
 
                                     <img height="100" width="100" src="images/avatar.png" alt="Tiasha Letostak, Ohio, USA">
 
-                                    <h3>Tiasha Letostak, Ohio, USA</h3>
+                                    <h3>Tiasha Letostak, Ph D, Ohio, USA</h3>
                                 </div>
                                 <blockquote class="style1">
                                     <span>We have always been impressed by EonBio’s expertise in working with draft presentations and improving them to universally acceptable, publication-quality material. EonBio is always our first choice in any help with professional writing</span>
@@ -169,7 +170,7 @@
                                     <a href="#testimonials" class="avatar">
                                         <img height="100" width="100" src="images/avatar.png" alt="George Ji, Suzhou, China">
                                     </a>
-                                    <h3>George Ji, Suzhou, China</h3>
+                                    <h3>George Ji, Ph D, Suzhou, China</h3>
                                 </div>
                                 <blockquote class="style1">
                                     <span>We have used the professional help of the EonBio staff in several of our grant applications and research manuscripts. EonBio has always generated amazingly high quality papers with improved English, better figures and sometimes new ideas for further improvement, to respond to the reviewers. The very rapid turnaround and reasonable cost are also major incentives to hire EonBio</span>
@@ -186,7 +187,7 @@
 
                                     <img height="100" width="100" src="images/avatar.png" alt="Toshihiro Ansai, Kyushu Dental University, Japan">
 
-                                    <h3>Toshihiro Ansai, Kyushu Dental University, Japan</h3>
+                                    <h3>Toshihiro Ansai, Ph D, Kyushu Dental University, Japan</h3>
                                 </div>
                                 <blockquote class="style1">
                                     <span>We have solicited EonBio’s proofing expertise in our research papers over multiple journals, and have been profoundly satisfied with the final results. All aspects of the writing, and not just the English grammar, vastly improved. The EonBio staff is highly professional and friendly, and will work diligently to meet your publication needs. Since EonBio is not in the publishing business, there is also no conflict of interest, which is a huge plus.</span>
