--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <div class="main clear-fix">
         <section class="header">
-            <img class="logo" src="images/logo2.png" />
+            <img class="logo" src="images/headerlogo.png" />
             <h2> We are a unique agency helping you walk the road of Manuscript Editing and Bioinformatics</h2>
             <div class="services">
                 <a class="btn btn-lg" href="#manuscriptediting"> Manuscript Editing</a>
