--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                     <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-generic" data-slide-to="3"></li>
                 </ol>
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
@@ -191,6 +192,23 @@
                                 </div>
                                 <blockquote class="style1">
                                     <span>We have solicited EonBio’s proofing expertise in our research papers over multiple journals, and have been profoundly satisfied with the final results. All aspects of the writing, and not just the English grammar, vastly improved. The EonBio staff is highly professional and friendly, and will work diligently to meet your publication needs. Since EonBio is not in the publishing business, there is also no conflict of interest, which is a huge plus.</span>
+                                </blockquote>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+
+                        <div class="slide">
+                            <div class="testimonials">
+                                <div class="avatar-container">
+
+                                    <img height="100" width="100" src="images/avatar.png" alt="Zhixu Ye, Ph D, Chongqing Medical University, China">
+
+                                    <h3>Zhixu Ye, Ph D, Chongqing Medical University, China</h3>
+                                </div>
+                                <blockquote class="style1">
+                                    <span>I received all the files on time as promised, in fact ahead of time. I am very grateful for your warm, friendly and professional help. I am very satisfied with the manuscript corrections and the redrawn Graphical Abstract, which helped our paper to be accepted. EonBio is the most satisfactory professional editing team for me. I have recommended EonBio to my colleagues, and will continue to do so. </span>
                                 </blockquote>
 
                             </div>
