--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
             <div class="note">
                 <div>* Manuscripts to be edited must be provided in English as MS-Word</div>
                 <div>* Figures are preferred in PowerPoint; also provide raw data numbers if statistical calculations such as error bars and standard deviations are to be done</div>
+                <div>* Please submit your files as E-mail attachments to: <a href="mailto:help@EonBio.com">help@eonbio.com</a></div>
             </div>
         </section>
         <section class="contactus">
