--- a/index.html
+++ b/index.html
@@ -346,6 +346,9 @@
                 <div>* Manuscripts to be edited must be provided in English as MS-Word</div>
                 <div>* Figures are preferred in PowerPoint; also provide raw data numbers if statistical calculations such as error bars and standard deviations are to be done</div>
                 <div>* Please submit your files as E-mail attachments to: <a href="mailto:help@EonBio.com">help@eonbio.com</a></div>
+                <div>Disclaimer: If additional rounds of language corrections are needed, EonBio will do them for free. However, since science is a major reason for the acceptance or rejection of a paper, Eonbio offers no guarantee that your manuscript will
+                    be accepted by improving the language alone.
+                </div>
             </div>
         </section>
         <section class="contactus">
