--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>EonBio</title>
-    <meta name="description" content="The EonBio is a unique agency helping bio scientists walk the road of Manuscript Editing and Bioinformatics">
+    <meta name="description"
+        content="The EonBio is a unique agency helping bio scientists walk the road of Manuscript Editing and Bioinformatics">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
@@ -48,12 +49,13 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="#">
                     <img class="logo" src="images/logo.jpg" />
                 </a>
@@ -79,7 +81,13 @@
             </div>
         </div>
     </nav>
+    <div class="announcement-bar">
 
+
+        <p class="announcement-bar__message">For all correspondence and manuscript submissions, please Email to: <a href="mailto:help@EonBio.com">help@EonBio.com</a></p>
+
+
+    </div>
     <div class="main clear-fix">
         <section class="header">
             <img class="logo" src="images/headerlogo.png" />
@@ -89,6 +97,7 @@
                 <a class="btn btn-lg" href="#bioinformatics"> Bioinformatics</a>
             </div>
         </section>
+
         <section class="whyus">
             <div id="whyus" class="anchor"></div>
             <h2>Why EonBio?</h2>
@@ -99,7 +108,9 @@
                         <div class="list-header">
                             Solid track record
                         </div>
-                        <div class="list-content">EonBio staff has three decades of experience in biological research, over 100 papers, track record of extramural funding (NIH, AHA, ACS etc), and training in bioinformatics</div>
+                        <div class="list-content">EonBio staff has three decades of experience in biological research,
+                            over 100 papers, track record of extramural funding (NIH, AHA, ACS etc), and training in
+                            bioinformatics</div>
                     </li>
                     <li class="col-md-3">
                         <i class="fa fa-pencil" aria-hidden="true"></i>
@@ -107,7 +118,8 @@
                             Comprehensive editing
                         </div>
                         <div class="list-content">
-                            We cover all aspects of the manuscript. Where appropriate, we also provide friendly scientific advice to further improve your work at no extra charge
+                            We cover all aspects of the manuscript. Where appropriate, we also provide friendly
+                            scientific advice to further improve your work at no extra charge
 
                         </div>
                     </li>
@@ -130,7 +142,7 @@
                 </ul>
             </div>
         </section>
- 
+
         <section class="manuscriptediting">
             <div id="manuscriptediting" class="anchor"></div>
             <h2>Manuscript Editing</h2>
@@ -139,10 +151,14 @@
                 </h3>
                 <ul class="quotas">
                     <li class="well well-sm"><q>English needs significant improvement</q></li>
-                    <li class="well well-sm"><q>English needs to be thoroughly edited before the paper can be accepted</q></li>
-                    <li class="well well-sm"><q>Unfortunately the paper is full of English errors that need to be corrected</q></li>
-                    <li class="well well-sm"><q>The Figs are not properly drawn and hard to understand; the bar graphs need error bars, and changes need p-values</q></li>
-                    <li class="well well-sm"><q>Please reformat the References according to our Journal guidelines</q></li>
+                    <li class="well well-sm"><q>English needs to be thoroughly edited before the paper can be
+                            accepted</q></li>
+                    <li class="well well-sm"><q>Unfortunately the paper is full of English errors that need to be
+                            corrected</q></li>
+                    <li class="well well-sm"><q>The Figs are not properly drawn and hard to understand; the bar graphs
+                            need error bars, and changes need p-values</q></li>
+                    <li class="well well-sm"><q>Please reformat the References according to our Journal guidelines</q>
+                    </li>
                     <li class="well well-sm"><q>Several references appear incomplete</q></li>
                 </ul>
             </div>
@@ -167,7 +183,8 @@
                         <div>Correct, complete and reformat references and citations</div>
                     </li>
                     <li class="col-md-4 resolution-item">
-                        <div>Redraw and improve the Figures as needed; we meet the required resolution and image quality, mandated by most journals</div>
+                        <div>Redraw and improve the Figures as needed; we meet the required resolution and image
+                            quality, mandated by most journals</div>
                     </li>
                 </ul>
             </div>
@@ -175,7 +192,9 @@
         <section class="bioinformatics">
             <div id="bioinformatics" class="anchor"></div>
             <h2>Bioinformatics</h2>
-            <h3>Analysis of sequence and structures can be daunting, but is increasingly required in high quality journals. Now you no longer walk the bioinformatic road alone. EonBio will provide the following services:</h3>
+            <h3>Analysis of sequence and structures can be daunting, but is increasingly required in high quality
+                journals. Now you no longer walk the bioinformatic road alone. EonBio will provide the following
+                services:</h3>
             <div class="row">
                 <div class="col-md-6">
                     <div class="bio-header">Protein structure analysis:</div>
@@ -183,7 +202,8 @@
                         <li>Hydrophobicity plots</li>
                         <li>Predict secondary structure in terms of areas of α-helix, β-strand, and loops
                         </li>
-                        <li>Homology-based structure modeling in 3D Rasmol format, using multiple structural templates and mainly the TASSER software suite
+                        <li>Homology-based structure modeling in 3D Rasmol format, using multiple structural templates
+                            and mainly the TASSER software suite
                         </li>
                         <li>Multiple alignments of primary structure with phylogeny tree plot</li>
                         <li>Identification of specific motifs and domains as requested
@@ -194,7 +214,8 @@
                     <div class="bio-header">RNA structure prediction:
                     </div>
                     <ul class="bio-content">
-                        <li>Predict RNA secondary structures using either MFE (Minimum Free Energy) or MEA (Maximum Expected Accuracy) algorithms and Turner99 parameters
+                        <li>Predict RNA secondary structures using either MFE (Minimum Free Energy) or MEA (Maximum
+                            Expected Accuracy) algorithms and Turner99 parameters
                         </li>
                         <li>Provide a secondary structure ensemble of co-transcriptional RNA folding
                         </li>
@@ -256,9 +277,13 @@
             </div>
             <div class="note">
                 <div>* Manuscripts to be edited must be provided in English as MS-Word</div>
-                <div>* Figures are preferred in PowerPoint; also provide raw data numbers if statistical calculations such as error bars and standard deviations are to be done</div>
-                <div>* Please submit your files as E-mail attachments to: <a href="mailto:help@EonBio.com">help@eonbio.com</a></div>
-                <div>Disclaimer: If additional rounds of language corrections are needed, EonBio will do them for free. However, since science is a major reason for the acceptance or rejection of a paper, Eonbio offers no guarantee that your manuscript will
+                <div>* Figures are preferred in PowerPoint; also provide raw data numbers if statistical calculations
+                    such as error bars and standard deviations are to be done</div>
+                <div>* Please submit your files as E-mail attachments to: <a
+                        href="mailto:help@EonBio.com">help@eonbio.com</a></div>
+                <div>Disclaimer: If additional rounds of language corrections are needed, EonBio will do them for free.
+                    However, since science is a major reason for the acceptance or rejection of a paper, Eonbio offers
+                    no guarantee that your manuscript will
                     be accepted by improving the language alone.
                 </div>
             </div>
@@ -298,8 +323,8 @@
                     <button class="btn btn-primary " name="subscribe" id="mc-embedded-subscribe">Send Message</button>
                     <span id="emailMessage"></span>
                 </div>
-                <div style="text-align:center">
-                    <a href="mailto:help@EonBio.com">
+                <div style="text-align:center"> 
+                   <a href="mailto:help@EonBio.com">
                         <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
 
                     </a>
@@ -307,12 +332,12 @@
         </section>
         <footer> Design by 2017 Zhresearches.com</footer>
 
-        </div>
-        <script>
-            $.material.init();
-        </script>
+    </div>
+    <script>
+        $.material.init();
+    </script>
 
-        <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
